jenkins/jenkins-virtualservice-org.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: jenkins-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "jenkins_domain"
  gateways:
  - "istio-system/istio-gateway"
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jenkins.jenkins.svc.cluster.local
        port:
          number: 80
